--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-dnd": "^5.0.0",
     "react-dom": "^17.0.1",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.2",
