--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^3.0.2",
     "react-dom": "^17.0.1",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.2",
