--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.5",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
