--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.21.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
+    "monaco-editor": "^0.23.0",
+    "monaco-editor-webpack-plugin": "^3.0.1",
     "react": "^17.0.1",
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^3.0.2",
@@ -23,7 +25,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "PORT=3001 react-app-rewired start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.1.8"
   }
 }
