--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.0",
+    "base-64": "^1.0.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "monaco-editor": "^0.23.0",
