--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dnd-html5-backend": "^3.0.2",
     "react-dom": "^17.0.1",
     "react-moment": "^1.1.1",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
