--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-toastify": "^7.0.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.1.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
