--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "monaco-editor": "^0.23.0",
     "monaco-editor-webpack-plugin": "^3.0.1",
     "react": "^17.0.1",
+    "react-csv": "^2.0.3",
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^3.0.2",
     "react-dom": "^17.0.1",
