--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^4.1.1",
+    "sweetalert2": "^11.0.17",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
