--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "connect-busboy": "^0.0.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -19,7 +20,9 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.6",
     "request-promise": "^4.2.6",
-    "socket.io": "^4.1.1"
+    "sharp": "^0.28.3",
+    "socket.io": "^4.1.1",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
