--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "bootstrap": "^5.0.0-beta2",
     "bootstrap-icons": "^1.4.0",
     "jwt-decode": "^3.1.2",
+    "mediasoup-client": "^3.6.36",
     "moment": "^2.29.1",
     "monaco-editor": "^0.23.0",
     "monaco-editor-webpack-plugin": "^3.0.1",
+    "peerjs": "^1.3.2",
     "react": "^17.0.1",
     "react-csv": "^2.0.3",
     "react-dnd": "^5.0.0",
