--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,14 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-sslify": "^1.2.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.5",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.6",
+    "peer": "^0.6.1",
     "request-promise": "^4.2.6",
     "sharp": "^0.28.3",
     "socket.io": "^4.1.1",
